--- a/resources-map/css/carto_style.css
+++ b/resources-map/css/carto_style.css
@@ -109,7 +109,7 @@ div#results {
   min-width: 200px;
   max-width: 350px;
   background: #fff;
-  margin-left: 2%;
+  margin-left: 2rem;
   font-family: "Open Sans", sans-serif; 
   font-size: 12px;
   box-shadow: 0 0px 16px rgba(0, 0, 0, 0.24);
@@ -200,6 +200,37 @@ aside.toolbox .ui:checked ~ .hamburger span:nth-child(2) {
 
 aside.toolbox .ui:checked ~ .hamburger span:nth-child(3) {
   transform: rotate(-45deg) translate(0, 0px);
+}
+
+/* Override leafleat zoom control styling */
+
+.leaflet-touch .leaflet-bar a:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.leaflet-touch .leaflet-control-layers, 
+.leaflet-touch .leaflet-bar {
+  border: none;
+  box-shadow: 0 0px 16px rgba(0, 0, 0, 0.24);
+}
+
+.leaflet-control-zoom a {
+  color: #2e3c43;
+}
+
+.leaflet-bar a, 
+.leaflet-bar a:hover {
+  border-bottom: 1px solid rgba(46, 60, 67, 0.08);
+}
+
+.leaflet-left {
+  left: 2rem;
+}
+
+.leaflet-left, 
+.leaflet-control {
+  margin-left: 0 !important;
 }
 
 /* FOR DISPLAYS ≤ 425px */
