--- a/range-rings-scrolly/src/App.css
+++ b/range-rings-scrolly/src/App.css
@@ -63,14 +63,24 @@ a, a:hover, a:visited {
 }
 
 .light {
-  color: #444;
-  background-color: #fafafa;
+  /* color: #444; */
+  /* background-color: #fafafa; */
 }
 
-.dark {
-  color: #fafafa;
+/* .dark {
   padding: 0px;
-}
+} */
+
+/* .dark p {
+  color: #fafafa;
+} */
+
+
+ .light .content {
+  /* color: #fafafa; */
+  background-color: #cad2d3;
+ }
+
 
 .step {
   padding-bottom: 50vh;
@@ -116,6 +126,7 @@ h1 + h2 {
   font-style: italic;
   opacity: 1;
   color: #C5C9CE;
+  color: red;
   margin-top: 0 !important;
   font-weight: normal
 }
