Add additional scrolly frames

--- a/range-rings-scrolly/src/App.css
+++ b/range-rings-scrolly/src/App.css
@@ -77,8 +77,8 @@ a, a:hover, a:visited {
 
 
  .light .content {
-  /* color: #fafafa; */
-  background-color: #cad2d3;
+  color: #fafafa;
+  /* background-color: #cad2d3; */
  }
 
 
