--- a/range-rings-scrolly/src/App.css
+++ b/range-rings-scrolly/src/App.css
@@ -21,9 +21,10 @@ a, a:hover, a:visited {
   display: inline-block;
   margin: .5vh auto;
   width: 100vw;
-  padding: 24px .5vh .5vh;
+  padding: 1.5rem .5vh .5vh;
   text-align: center;
   background: linear-gradient(0deg, rgba(13,15,17,0) 0%, rgba(3,15,17,1) 90%);
+  color: #f3f3f3;
 }
 
 #footer {
@@ -62,25 +63,9 @@ a, a:hover, a:visited {
   margin-left: 62vw;
 }
 
-.light {
-  /* color: #444; */
-  /* background-color: #fafafa; */
-}
-
-/* .dark {
-  padding: 0px;
-} */
-
-/* .dark p {
-  color: #fafafa;
-} */
-
-
  .light .content {
   color: #fafafa;
-  /* background-color: #cad2d3; */
- }
-
+}
 
 .step {
   padding-bottom: 50vh;
@@ -96,7 +81,7 @@ a, a:hover, a:visited {
 }
 
 .step > div > *:not(h2) {
-  background-color: #474F56
+  /* background-color: #474F56 */
 }
 
 .step > div > *:not(img):not(h2) {
@@ -104,15 +89,15 @@ a, a:hover, a:visited {
 }
 ​
 .step > div > *:last-child:not(img) {
-  padding-bottom: 32px
+  padding-bottom: 2rem;
 }
 
 .step > .content > *:first-child:not(img):not(h2), .content h3 {
-  padding-top: 32px;
+  padding-top: 2rem;
 }
 
 .content:not(.subtitle) {
-  padding-top: 0px;
+  padding-top: 0;
 }
 
 h1 {
@@ -126,24 +111,23 @@ h1 + h2 {
   font-style: italic;
   opacity: 1;
   color: #C5C9CE;
-  color: red;
   margin-top: 0 !important;
-  font-weight: normal
+  font-weight: normal;
 }
 
 h1 + h2 + p {
-  opacity: .8;
+  opacity: 0.8;
   color: #C5C9CE;
 }
 ​
 .step h2 { 
+  padding-bottom: 0.75rem;
+  margin-bottom: 1rem;
   font-family: 'Frank Ruhl Libre', Georgia, serif;
   font-weight: 400;
   font-size: 32px;
-  padding-bottom: 12px;
-  margin-bottom: 16px;
-  opacity: .7;
-  transition: .5s opacity ease-in-out;
+  opacity: 0.7;
+  transition: 0.5s opacity ease-in-out;
   line-height: 1.2;  
 }
 
@@ -152,13 +136,13 @@ h1 + h2 + p {
 }
 
 .step h2:after {
-  display:block;
-  content:'';
-  height:2px;
-  width:0px;
+  display: block;
+  content: '';
+  height: 2px;
+  width: 0;
   background-color:#fff;
-  margin-top:12px;
-  opacity: .4;
+  margin-top: 12px;
+  opacity: 0.4;
   transition: 1s width ease-in-out;
 }
 
@@ -168,70 +152,73 @@ h1 + h2 + p {
 }
 
 .step h3.subtitle {
-  margin-top: 0px;
-  margin-bottom: 0px;
-  padding-bottom:12px;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 0.75rem;
   line-height: auto;
   font-weight: 600;
   font-size: 22px;
-  letter-spacing: .03rem;
+  letter-spacing: 0.03rem;
 }
 ​
 .step h3 +img {
-  padding-top: 12px;
+  padding-top: 0.75rem;
 }
 ​
 p {
   font-size: 18px;
   line-height: 1.6;
   color: #f3f3f3;
-  margin-top:0px;
+  margin-top: 0;
 }
 
 .desc {
-  padding: 25px 25px;
+  padding: 1.563rem 1.563rem;
+  background: #080B0F;
+  opacity: 0.7;
   font-size: 18px;
 }
 
 .subtitle + .desc {
-  padding: 0 25px 25px;
+  padding: 0 1.563rem 1.563rem;
 }
 
 #footer img {
   max-width: 500px;
   margin: 0 auto;
-  padding: 0px 16px;
-  margin-bottom: 16px;
+  padding: 0 1rem;
+  margin-bottom: 1rem;
 }
 ​
 #footer p {
+  z-index: 200;
  color:#C5C9CE;
- z-index: 200;
 }
 
 .step img {
-  width: 100%;
   display: block;
+  width: 100%;
 }
 
 .content {
-  margin-top: 20px;
+  margin-top: 1.25rem;
 }
 
 .title {
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
   font-family: 'Frank Ruhl Libre', Georgia, serif;
   font-weight: 500;
+  color: #f3f3f3;
 }
 
 .subtitle {
   margin-top: 0;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
+  padding-left: 1.563rem;
+  padding-right: 1.25rem;
   line-height: 1.4;
   font-size: 20px;
   font-weight: 600;
-  padding-left: 25px;
-  padding-right: 20px;
 }
 
 @media (max-width: 750px) {
@@ -243,15 +230,15 @@ p {
 
 .step#step3ab.active:after {
   display:block;
-  content:'Images go here';
-  text-align:center;
-  width: 100%;
   position:fixed;
-  top: 62px;
+  top: 3.875rem;
   right: -30rem;
+  content:'Images go here';
+  width: 100%;
+  padding-bottom: 3.125rem;
+  text-align:center;
   opacity: 1;
   transition: 600ms opacity ease-in-out;
-  padding-bottom: 50px;
 }
 
 .step:after {
