--- a/range-rings-scrolly/src/App.css
+++ b/range-rings-scrolly/src/App.css
@@ -18,13 +18,25 @@ a, a:hover, a:visited {
 }
 
 #header {
-  display: inline-block;
-  margin: .5vh auto;
+  display: flex;
+  align-items: flex-start;
   width: 100vw;
-  padding: 1.5rem .5vh .5vh;
+  padding: 0rem 2vh .5vh;
   text-align: center;
   background: linear-gradient(0deg, rgba(13,15,17,0) 0%, rgba(3,15,17,1) 90%);
   color: #f3f3f3;
+}
+
+#header h1 {
+  text-transform: uppercase;
+  font-size: 20px;
+  font-family: PT Sans Narrow,Trebuchet MS,Helvetica,sans-serif;
+  margin: 2.5rem 3.5rem 0 3rem;
+}
+
+#header img {
+  position: relative;
+  left: -25rem;
 }
 
 #footer {
@@ -79,6 +91,20 @@ a, a:hover, a:visited {
   line-height: 25px;
   max-width: 350px;
 }
+
+#stepintro {
+  position: relative;
+  left: 30vh;
+}
+
+#stepintro .title {
+  font-size: 42px;
+}
+
+#stepintro .title {
+  font-size: 42px;
+}
+
 
 .step > div > *:not(h2) {
   /* background-color: #474F56 */
