--- a/range-rings-scrolly/src/App.css
+++ b/range-rings-scrolly/src/App.css
@@ -1,7 +1,7 @@
 body {
   margin:0; 
   padding:0; 
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: PT Sans, sans-serif;
   overflow-x: hidden;
 }
 
@@ -17,9 +17,12 @@ a, a:hover, a:visited {
   z-index: -5;
 }
 
-/* .csis-logo {
+.csis-logo {
+  /* grid-area: logo; */
   background-image: url('https://res.cloudinary.com/csisideaslab/image/upload/v1628110683/long.svg');
-  position: absolute;
+  /* position: absolute;
+   */
+   position: relative;
   display: flex;
   justify-self: center;
   z-index: 99999;
@@ -27,7 +30,7 @@ a, a:hover, a:visited {
   width: 100%;
   background-repeat: no-repeat;
   background-position: center; 
-} */
+}
 
 #header {
   display: flex;
@@ -51,16 +54,114 @@ a, a:hover, a:visited {
   left: -25rem;
 }
 
+/* footer */
+
 #footer {
-  width: 100%;
-  min-height: 2vh;
-  padding-top: .5vh;
-  padding-bottom: .5vh;
-  text-align: center;
-  line-height: 5px;
+  display: grid;
+  grid-template-areas: 'footer-title footer-title' 'content credits' 'content-link credits' 'logo logo' 'byline byline';
+   grid-template-columns: 1fr 1fr;
+   column-gap: 24px;
+  /* width: 100%; */
+  padding: 0 30vh 5vh; 
+  /* text-align: center; */
   font-size: 13px;
   color:#C5C9CE;
+  /* grid-template-columns: minmax(auto, 700px) minmax(auto, 315px); */
+  grid-template-rows:
+    max-content minmax(0, max-content) max-content minmax(0, max-content)
+    auto;
 }
+
+.footer__title {
+  grid-area: footer-title;
+  font-family: PT Sans Narrow;
+  font-size: 24px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: normal;
+}
+
+.content__wrapper {
+  grid-area: content;
+  font-size: 16px;
+}
+
+.content__wrapper p {
+  margin: 0 !important;
+  padding-bottom: 3rem;
+}
+
+.content__link {
+  margin-top: 8rem;
+}
+
+.credits {
+  grid-area: credits;
+  padding-bottom: 12px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+#footer a {
+  color: rgba(255, 255, 255, 0.9);
+  cursor: pointer;
+}
+
+#footer a:hover {
+  color: rgba(255, 255, 255, 0.9);
+  text-decoration: none;
+}
+
+#footer a:focus {
+  background: rgba(0, 0, 0, 0.65);
+  text-decoration: none;
+}
+
+.content__link:after {
+  content: '';
+  display: block;
+  position: relative;
+  height: 20px;
+  top: -20px;
+  left: 50px;
+  width: 100%;
+  background-image: url('/images/right.svg');
+  background-repeat: no-repeat;
+  background-position: center; 
+}
+
+.byline {
+  grid-area: byline;
+  display: flex;
+  justify-content: center;
+}
+
+.logo {
+  grid-area: logo;
+}
+
+.credits__container {
+  display: grid;
+  display: flex;
+  flex-direction: column;
+}
+
+.credits__container div {
+  font-weight: 800;
+}
+
+ul {
+  margin: 0;
+  padding-left: 0;
+  padding-top: 12px;
+  list-style: none;
+}
+
+li {
+  margin-bottom: 12px;
+  font-weight: 400;
+}
+
 
 .image {
   text-align: right;
