--- a/range-rings-scrolly/src/App.css
+++ b/range-rings-scrolly/src/App.css
@@ -18,11 +18,10 @@ a, a:hover, a:visited {
 }
 
 .csis-logo {
-  /* grid-area: logo; */
+  grid-area: logo;
+  margin-top: 4rem;
   background-image: url('https://res.cloudinary.com/csisideaslab/image/upload/v1628110683/long.svg');
-  /* position: absolute;
-   */
-   position: relative;
+  position: relative;
   display: flex;
   justify-self: center;
   z-index: 99999;
@@ -30,6 +29,10 @@ a, a:hover, a:visited {
   width: 100%;
   background-repeat: no-repeat;
   background-position: center; 
+}
+
+.csis-logo:focus {
+  background-color: unset !important;
 }
 
 #header {
@@ -58,15 +61,14 @@ a, a:hover, a:visited {
 
 #footer {
   display: grid;
-  grid-template-areas: 'footer-title footer-title' 'content credits' 'content-link credits' 'logo logo' 'byline byline';
+  grid-template-areas: 'footer-title footer-title' 'content credits' 'content-link credits' 'logo logo' 'copyright copyright';
    grid-template-columns: 1fr 1fr;
    column-gap: 24px;
   /* width: 100%; */
-  padding: 0 30vh 5vh; 
+  padding: 0 29vh 5vh; 
   /* text-align: center; */
   font-size: 13px;
-  color:#C5C9CE;
-  /* grid-template-columns: minmax(auto, 700px) minmax(auto, 315px); */
+  color: rgba(255, 255, 255, 0.9);
   grid-template-rows:
     max-content minmax(0, max-content) max-content minmax(0, max-content)
     auto;
@@ -83,16 +85,24 @@ a, a:hover, a:visited {
 
 .content__wrapper {
   grid-area: content;
+  padding: 0 2rem;
   font-size: 16px;
 }
 
 .content__wrapper p {
   margin: 0 !important;
-  padding-bottom: 3rem;
+  padding-bottom: 2rem;
 }
 
-.content__link {
-  margin-top: 8rem;
+.content__wrapper:after {
+  content: "";
+  display: block;
+  position: relative;
+  top: -11rem;
+  left: 2rem;
+  border-right: 1px solid rgba(255, 255, 255, 0.3);
+  width: 100%;
+  height: 95%;
 }
 
 .credits {
@@ -108,12 +118,12 @@ a, a:hover, a:visited {
 }
 
 #footer a:hover {
-  color: rgba(255, 255, 255, 0.9);
+  color: rgba(255, 255, 255);
   text-decoration: none;
 }
 
 #footer a:focus {
-  background: rgba(0, 0, 0, 0.65);
+  background-color: rgba(0, 0, 0, 0.65);
   text-decoration: none;
 }
 
@@ -122,18 +132,19 @@ a, a:hover, a:visited {
   display: block;
   position: relative;
   height: 20px;
-  top: -20px;
-  left: 50px;
+  top: -21px;
+  left: 80px;
   width: 100%;
   background-image: url('/images/right.svg');
   background-repeat: no-repeat;
   background-position: center; 
 }
 
-.byline {
-  grid-area: byline;
+.copyright {
+  grid-area: copyright;
   display: flex;
   justify-content: center;
+  font-size: 13px;
 }
 
 .logo {
