--- a/range-rings-scrolly/src/App.css
+++ b/range-rings-scrolly/src/App.css
@@ -524,12 +524,20 @@ p {
   opacity: 1;
 }
 
-
+/* icon styling */
 
 .circle {
   position: relative;
-  top: 2px;
   margin-right: 4px;
+}
+
+.circle--inner {
+  top: 2px;
+  opacity: 0.6;
+}
+
+.circle--outer {
+  opacity: 1;
 }
 
 .circle--green {
