--- a/range-rings-scrolly/src/App.css
+++ b/range-rings-scrolly/src/App.css
@@ -125,6 +125,8 @@ body {
   text-align: center;
   text-transform: uppercase;
   font-weight: normal;
+  z-index: 4;
+  width: 300px;
 }
 
 .footer__title a {
