--- a/scs-survey-maps/scs-line-map/css/map.css
+++ b/scs-survey-maps/scs-line-map/css/map.css
@@ -1,59 +1,53 @@
 body {
-  font-family: "Source Sans Pro", sans-serif;
-}
-
-div#searchbox input {
-  width: 75%;
-}
-
-div#results {
-  background: #fff;
+  font-family: "PT Sans", sans-serif;
 }
 
 .box header h1 {
   display: inline-block;
   color: #2e3c43;
-  line-height: 26px;
-  font-family: "Source Sans Pro", sans-serif;
-  font-size: 21px;
-  font-weight: 700;
+  line-height: 28px;
+  font-family: "PT Sans Narrow", sans-serif;
+  font-size: 26px;
+  font-weight: 600;
   width: calc(100% - 67px);
 }
 
 .description {
   color: #747d82;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 16px;
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-family: "PT Sans", sans-serif;
 }
 
-.button__title {
-  font-size: 12px !important;
+.popupHeaderStyle {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 1.2;
+  margin-bottom: 8px;
 }
 
-.ul {
-  font-family: "Source Sans Pro", sans-serif;
+.popupEntryStyle {
+  padding: 0;
+  margin: 0;
+  font: 12px "Source Sans Pro", sans-serif;
+  color: rgba(0, 0, 0, 0.8);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+.popupEntryStyle p {
+  margin: 4px;
+}
+
+.popupEntryStyle span {
+  font-weight: 600;
 }
 
 .leaflet-popup-content-wrapper {
   background-color: white;
   box-shadow: 0 3px 14px rgba(0, 0, 0, 0.4);
   color: #333;
-}
-
-.popupHeaderStyle {
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 600;
-  text-transform: uppercase;
-  text-align: center;
-}
-
-.popupEntryStyle {
-  padding: 0;
-  margin: 0;
-  font: 14px "Source Sans Pro", sans-serif;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  text-align: center;
 }
 
 .leaflet-popup-content-wrapper,
@@ -63,93 +57,202 @@ div#results {
   border-radius: 3px;
 }
 
-#controls #info h3 {
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 700;
+.translate description mobile-toggle {
+  color: #747D82;
+  font-size: 14px;
+  line-height: 16px;
+  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+  font-weight: 400; 
+}
+
+.mobile-toggle.translate.subheading {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 600;
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 24px;
   margin: 16px 0 4px;
 }
 
-.legend {
-  position: relative;
-  top: 5px;
-  display: flex;
-  margin: 0;
-  padding: 0;
-  list-style: none;
+.ul {
+  font: 12px/16px 'Open Sans';
+  cursor: pointer;
+  color: #000;
 }
 
-.legend[data-type="total_cases"] {
-  --ramp1: #ffc6c4;
-  --ramp2: #f29ca3;
-  --ramp3: #da7489;
-  --ramp4: #b95073;
-  --ramp5: #93345d;
-  --ramp6: #672044;
+.itemText {
+  font-family: "PT Sans", sans-serif;
+  font-size: 14px;
 }
 
-.legend li {
-  padding: 0px;
-  margin: 0;
-  position: relative;
-}
-
-.legend li::before {
-  content: "";
-  position: relative;
-  padding: 0;
-  margin: 0;
+.colorKey,
+.shapeKey {
   display: inline-block;
-  width: 25px;
-  height: 5px;
-  background: var(--bg);
+  height: 3px;
+  width: 21px;
+  margin: 4px;
 }
 
-#ramp1::before {
-  background-color: var(--ramp1);
-  border: 3px solid var(--ramp1);
+input[name='2020'] + .colorKey {
+  background-color: #3969ac;
 }
 
-#ramp2::before {
-  background-color: var(--ramp2);
-  border: 3px solid var(--ramp2);
+input[name='2021'] + .colorKey {
+  background-color: #11a579;
 }
 
-#ramp3::before {
-  background-color: var(--ramp3);
-  border: 3px solid var(--ramp3);
-}
-
-#ramp4::before {
-  background-color: var(--ramp4);
-  border: 3px solid var(--ramp4);
-}
-
-#ramp5::before {
-  background-color: var(--ramp5);
-  border: 3px solid var(--ramp5);
-}
-
-#ramp6::before {
-  background-color: var(--ramp6);
-  border: 3px solid var(--ramp6);
-}
-
-.legend__value {
+aside.toolbox {
+  display: block;
+  top: -24px;
+  left: calc(100vw - 324px);
   position: relative;
-  padding-bottom: 12px !important;
+  -webkit-user-select: none;
+  user-select: none;
 }
 
-.legend__value > span {
+aside.toolbox .ui {
+  width: 100%;
+  display: block;
+  height: 40px;
   position: absolute;
-  top: 15px;
-  right: 23px;
-  font-size: 12px !important;
+  top: 50px;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 3;
+  -webkit-touch-callout: none;
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.25);
 }
 
-#ramp6 > span {
-  position: absolute;
-  right: 15px;
+.hamburger {
+  position: relative;
+  width: 100%;
+  top: 50px;
+  left: 24px;
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 4px;
+  padding: 16px;
+  margin-left: -24px;
+  margin-right: -24px;
+}
+
+.hamburger .menu {
+  font-family: "PT Sans", sans-serif;
+  color: black;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 16px;
+  margin: 0 0 0 12px;
+}
+
+.hamburger span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin: 5px 0;
+  position: relative;
+  background: black;
+  border-radius: 3px;
+  z-index: 2;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+}
+
+.hamburger span:nth-child(1) {
+  transform-origin: 0% 0%;
+}
+
+.hamburger span:nth-child(3) {
+  transform-origin: 0% 100%;
+}
+
+aside.toolbox .ui:checked ~ .hamburger span:nth-child(1) {
+  opacity: 1;
+  transform: rotate(45deg) translate(-3px, -3px);
+}
+
+aside.toolbox .ui:checked ~ .hamburger span:nth-child(2) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+aside.toolbox .ui:checked ~ .hamburger span:nth-child(3) {
+  transform: rotate(-45deg) translate(0, 0px);
+}
+
+.leaflet-control-zoom,
+leaflet-bar,
+leaflet-control {
+  display: none;
+}
+
+.menu-translate {
+  margin-left: 12px;
+  font-weight: 600;
+  font-size: 28px;
+  font-family: "PT Sans Narrow", sans-serif;
+  color: #000;
+}
+
+/* FOR DISPLAYS ≤ 425px */
+
+.mobile-only {
+  visibility: hidden;
+  height: 0;
+}
+
+@media (max-width: 425px) {
+  .mobile-only {
+    visibility: visible;
+    height: 50px;
+    color: #747d82;
+    font-size: 12px;
+    line-height: 16px;
+    font-family: "Open Sans", Arial, Helvetica, sans-serif;
+    font-weight: 400;
+  }
+}
+
+@media (max-width: 425px) {
+  .mobile-toggle {
+    display: none;
+  }
+}
+
+@media (max-width: 425px) {
+  .box {
+    padding: 50px 24px 24px;
+  }
+}
+
+@media (max-width: 425px) {
+  aside.toolbox {
+    z-index: 1;
+    top: -36px;
+  }
+}
+
+@media (max-width: 425px) {
+  .leaflet-touch .leaflet-bar {
+    border: none;
+    top: 4px;
+  }
+}
+
+@media (max-width: 425px) {
+  .box header h1 {
+    font-family: "PT Sans Narrow", sans-serif;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 22px;
+    color: #000;
+  }
+}
+
+@media (max-width: 425px) {
+  aside.toolbox .ui:not(:checked) ~ .box {
+    display: none;
+  }
 }
