--- a/range-rings-scrolly/src/App.css
+++ b/range-rings-scrolly/src/App.css
@@ -122,11 +122,15 @@ body {
   grid-area: footer-title;
   font-family: PT Sans Narrow;
   font-size: 24px;
-  text-align: center;
   text-transform: uppercase;
   font-weight: normal;
   z-index: 4;
-  width: 300px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__title {
+    text-align: center;
+  }
 }
 
 .footer__title a {
