--- a/east-china-sea-oil-rig-locations-map/css/map.css
+++ b/east-china-sea-oil-rig-locations-map/css/map.css
@@ -7,7 +7,7 @@ body {
   left: 2rem;
   top: 2rem;
   border-radius: 3px;
-  font-family: 'Spectral', serif;
+  font-family: 'PT Sans', sans-serif;
   max-width: 315px;
   min-width: 315px;
   z-index: 2;
@@ -19,9 +19,10 @@ body {
 .toolbox header h1{
   line-height: 1.1;
   color: #353535;
-  font-weight: 600;
+  font-weight: bold;
   border-bottom: 1px solid rgba(0,0,0,0.5);
   padding-bottom: 0.75rem;
+  font-family: "PT Sans Narrow", sans-serif;
 }
 
 .box-header {
@@ -39,7 +40,7 @@ body {
 
 .panel {
   position: absolute;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: 'PT Sans', sans-serif;
   top: 0;
   right: -33%;
   padding: 1rem 2.5rem;
@@ -58,14 +59,14 @@ body {
 }
 
 .panel-content h2 {
-  font-family: 'Spectral', serif;
+  font-family: "PT Sans Narrow", sans-serif;
   text-transform: uppercase;
   font-size: 1.15rem;
   opacity: .8;
 }
 
 .panel-content span {
-  font-family: 'Spectral', serif;
+  font-family: 'PT Sans', sans-serif;
 }
 
 .open {
@@ -77,7 +78,7 @@ body {
   right: 36px;
   top: 27px;
   z-index: 1;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: 'PT Sans', sans-serif;
   color: #353535;
   background-color: white;
   transition: 0.3s all ease;
@@ -87,27 +88,32 @@ body {
 }
 
 .close-btn:hover {
-  color: #077283;
+  color: #02354b;
 }
 
 
 .sidePanelHeaderStyle {
   text-transform: uppercase;
   color: #353535;
-  border-bottom: 1px solid rgba(0,0,0,0.5);
   padding-bottom: 1rem;
   margin-bottom: 2rem;
 }
-
+.sidePanelHeaderStyle::after {
+  content: "";
+  display: block;
+  border-bottom: 2px solid #02354b;
+  width: 34px;
+  height: 6px;
+}
 .side-panel-value {
   text-transform: uppercase;
-  color:#077283;
+  color:#02354b;
   font-size: 15px;
 }
 
 p.side-panel-link {
   text-transform: none;
-  font-family: 'Spectral', serif;
+  font-family: 'PT Sans', sans-serif;
   font-weight: 400;
   font-size: 17px;
   line-height: 1.4;
@@ -132,17 +138,98 @@ p.side-panel-link {
 }
 
 a {
-  color: #077283;
+  color: #036997;
 }
 
 a:hover {
   text-decoration: none;
-  color: #032A30;
+  color: #02354b; 
 }
 
 .leaflet-left {
   margin-top: 1.5rem;
   border-radius: 3px;
+}
+
+
+.legend {
+  position: relative;
+  top: .313rem;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  padding-bottom: .75rem;
+  font-size: .75rem;
+}
+
+.legend[data-type="legends"] {
+  --newRig: #7d4391;
+  --oldRig: #63a7ec;
+  --japanShelf: #caa16d;
+  --chinaShelf: #0078b2;
+  --jointDevelopment: #0c8d79;
+  --ramp6: #670000;
+}
+
+.legend li {
+  padding: 0;
+  margin: 0;
+  position: relative;
+}
+
+.legend li span::before {
+  content: "";
+  position: relative;
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background: var(--bg);
+}
+
+#ramp1::before {
+  background-color: var(--newRig);
+  border: 3px solid var(--newRig);
+  border-radius: 50%;
+}
+
+#ramp2::before {
+  background-color: var(--oldRig);
+  border: 3px solid var(--oldRig);
+  border-radius: 50%;
+}
+
+#ramp3::before {
+  background-color: var(--japanShelf);
+  /* border: 3px solid var(--japanShelf); */
+  width: 25px;
+  height: 3px;
+}
+
+#ramp4::before {
+  background-color: var(--chinaShelf);
+  /* border: 3px solid var(--chinaShelf); */
+  width: 25px;
+  height: 3px;
+}
+
+#ramp5::before {
+  background-color: var(--jointDevelopment);
+  /* border: 3px solid var(--jointDevelopment); */
+  width: 25px;
+  height: 3px;
+}
+
+.legend-text {
+  position: relative;
+  margin-left: 10px;
+}
+
+.legend__value>span {
+  margin-left: 10px;
 }
 
 @media screen and (max-width: 768px) {
