--- a/east-china-sea-oil-rig-locations-map/css/map.css
+++ b/east-china-sea-oil-rig-locations-map/css/map.css
@@ -194,96 +194,16 @@ a:hover {
   background-color: #0c8d79;
 }
 
-.legend {
-  position: relative;
-  top: .313rem;
-  display: flex;
-  flex-direction: column;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  padding-bottom: .75rem;
-  font-size: .75rem;
+.text {
+  font-size: 14px;
 }
 
-.legend[data-type="legends"] {
-  --newRig: #7d4391;
-  --oldRig: #63a7ec;
-  --japanShelf: #caa16d;
-  --chinaShelf: #0078b2;
-  --jointDevelopment: #0c8d79;
-  --ramp6: #670000;
+.subtitle {
+  padding-top: 16px;
+  font-family: "PT Sans Narrow";
+  font-size: 16px;
+  font-weight: bold;
 }
-
-.legend li {
-  padding: 0;
-  margin: 0;
-  position: relative;
-  display: flex;
-}
-
-.legend li span::before {
-  content: "";
-  position: relative;
-  padding: 0;
-  margin: 0;
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  background: var(--bg);
-}
-
-#ramp1 {
-  margin-right: 9px;
-}
-
-#ramp2 {
-  margin-right: 9px;
-}
-
-#ramp1::before {
-  background-color: var(--newRig);
-  border: 3px solid var(--newRig);
-  border-radius: 50%;
-  margin-left: 4px;
-}
-
-#ramp2::before {
-  background-color: var(--oldRig);
-  border: 3px solid var(--oldRig);
-  border-radius: 50%;
-  margin-left: 4px;
-}
-
-#ramp3::before {
-  background-color: var(--japanShelf);
-  /* border: 3px solid var(--japanShelf); */
-  width: 25px;
-  height: 3px;
-}
-
-#ramp4::before {
-  background-color: var(--chinaShelf);
-  /* border: 3px solid var(--chinaShelf); */
-  width: 25px;
-  height: 3px;
-}
-
-#ramp5::before {
-  background-color: var(--jointDevelopment);
-  /* border: 3px solid var(--jointDevelopment); */
-  width: 25px;
-  height: 3px;
-}
-
-/* .legend-text {
-  position: relative;
-  margin-left: 10px;
-}
-
-.legend__value>span {
-  margin-left: 10px;
-} */
 
 @media screen and (max-width: 768px) {
   .panel {
