--- a/east-china-sea-oil-rig-locations-map/css/map.css
+++ b/east-china-sea-oil-rig-locations-map/css/map.css
@@ -156,18 +156,19 @@ a:hover {
   display: grid;
   grid-template-columns: 30px auto;
   column-gap: 16px;
+  row-gap: 4px;
 }
 
 .circle {
-  width: 10px;
-  height: 10px;
+  width: 18px;
+  height: 18px;
   border-radius: 50%;
   margin: 0 auto;
   align-self: center;
 }
 
 .line {
-  width: 25px;
+  width: 35px;
   height: 2px;
   margin: 0 auto;
   align-self: center;
