--- a/east-china-sea-oil-rig-locations-map/css/map.css
+++ b/east-china-sea-oil-rig-locations-map/css/map.css
@@ -13,6 +13,7 @@ body {
   z-index: 2;
   background-color: #fff;
   padding: 0.5rem 1.5rem;
+  padding-bottom: 1.25rem;
   box-shadow: -4px 4px 8px rgb(0 0 0 / 20%);
 }
 
@@ -27,7 +28,7 @@ body {
 
 .box-header {
   margin-top: .5rem;
-  margin-bottom: .5rem;
+  margin-bottom: 1.25rem;
 }
 
 .box-header span {
@@ -160,20 +161,21 @@ a:hover {
 }
 
 .circle {
-  width: 18px;
-  height: 18px;
+  width: 16px;
+  height: 16px;
   border-radius: 50%;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   align-self: center;
+  justify-self: center;
 }
 
 .line {
-  width: 35px;
+  width: 31px;
   height: 4px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   align-self: center;
+  justify-self: center;
 }
-
 
 .new {
   background-color: #7d4391;
@@ -200,7 +202,7 @@ a:hover {
 }
 
 .subtitle {
-  padding-top: 16px;
+  /* padding-top: 16px; */
   font-family: "PT Sans Narrow";
   font-size: 16px;
   font-weight: bold;
